# publishers-gunicorn

./: .pre-commit-config.yaml  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/publishers/: gunicorn_publisher.py
src/nagare/publishers/: gunicorn_publisher.py
