[metadata]
name = nagare-publishers-gunicorn
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Guicorn publisher
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/publishers-gunicorn
    Tracker = https://github.com/nagareproject/publishers-gunicorn/issues

[options]
zip_safe = False
packages = find:
install_requires =
    futures; python_version == "2.7"
    ws4py
    gunicorn[gthread]
    nagare-server-http

[options.entry_points]
gunicorn.loggers =
    nagare = nagare.publishers.gunicorn_publisher:Logger

nagare.publishers =
    gunicorn = nagare.publishers.gunicorn_publisher:Publisher

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
